shared/go/parsers/generated/acl/getfacl/getfacl_parser.go
// Code generated from /home/oleksiybondar/Documents/development/lite-nas/shared/go/parsers/acl/getfacl/grammar/Getfacl.g4 by ANTLR 4.13.2. DO NOT EDIT.

package getfacl // Getfacl
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var (
	_ = fmt.Printf
	_ = strconv.Itoa
	_ = sync.Once{}
)

type GetfaclParser struct {
	*antlr.BaseParser
}

var GetfaclParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func getfaclParserInit() {
	staticData := &GetfaclParserStaticData
	staticData.LiteralNames = []string{
		"", "'file'", "'owner'", "'default:'", "'user'", "'group'", "'other'",
		"'mask'", "", "", "'#'", "':'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "DEFAULT_PREFIX", "USER_TAG", "GROUP_TAG", "OTHER_TAG",
		"MASK_TAG", "PERM", "VALUE_ATOM", "HASH", "COLON", "WS", "NL",
	}
	staticData.RuleNames = []string{
		"document", "line", "headerLine", "commentLine", "aclEntryLine", "headerKey",
		"tag", "qualifier", "valueAtom",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// GetfaclParserInit initializes any static state used to implement GetfaclParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewGetfaclParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func GetfaclParserInit() {
	staticData := &GetfaclParserStaticData
	staticData.once.Do(getfaclParserInit)
}

// NewGetfaclParser produces a new parser instance for the optional input antlr.TokenStream.
func NewGetfaclParser(input antlr.TokenStream) *GetfaclParser {
	GetfaclParserInit()
	this := new(GetfaclParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &GetfaclParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Getfacl.g4"

	return this
}

// GetfaclParser tokens.
const (
	GetfaclParserEOF            = antlr.TokenEOF
	GetfaclParserT__0           = 1
	GetfaclParserT__1           = 2
	GetfaclParserDEFAULT_PREFIX = 3
	GetfaclParserUSER_TAG       = 4
	GetfaclParserGROUP_TAG      = 5
	GetfaclParserOTHER_TAG      = 6
	GetfaclParserMASK_TAG       = 7
	GetfaclParserPERM           = 8
	GetfaclParserVALUE_ATOM     = 9
	GetfaclParserHASH           = 10
	GetfaclParserCOLON          = 11
	GetfaclParserWS             = 12
	GetfaclParserNL             = 13
)

// GetfaclParser rules.
const (
	GetfaclParserRULE_document     = 0
	GetfaclParserRULE_line         = 1
	GetfaclParserRULE_headerLine   = 2
	GetfaclParserRULE_commentLine  = 3
	GetfaclParserRULE_aclEntryLine = 4
	GetfaclParserRULE_headerKey    = 5
	GetfaclParserRULE_tag          = 6
	GetfaclParserRULE_qualifier    = 7
	GetfaclParserRULE_valueAtom    = 8
)

// IDocumentContext is an interface to support dynamic dispatch.
type IDocumentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllLine() []ILineContext
	Line(i int) ILineContext

	// IsDocumentContext differentiates from other interfaces.
	IsDocumentContext()
}

type DocumentContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDocumentContext() *DocumentContext {
	p := new(DocumentContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_document
	return p
}

func InitEmptyDocumentContext(p *DocumentContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_document
}

func (*DocumentContext) IsDocumentContext() {}

func NewDocumentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DocumentContext {
	p := new(DocumentContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GetfaclParserRULE_document

	return p
}

func (s *DocumentContext) GetParser() antlr.Parser { return s.parser }

func (s *DocumentContext) EOF() antlr.TerminalNode {
	return s.GetToken(GetfaclParserEOF, 0)
}

func (s *DocumentContext) AllLine() []ILineContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ILineContext); ok {
			len++
		}
	}

	tst := make([]ILineContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ILineContext); ok {
			tst[i] = t.(ILineContext)
			i++
		}
	}

	return tst
}

func (s *DocumentContext) Line(i int) ILineContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILineContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILineContext)
}

func (s *DocumentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DocumentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DocumentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GetfaclListener); ok {
		listenerT.EnterDocument(s)
	}
}

func (s *DocumentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GetfaclListener); ok {
		listenerT.ExitDocument(s)
	}
}

func (p *GetfaclParser) Document() (localctx IDocumentContext) {
	localctx = NewDocumentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GetfaclParserRULE_document)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(21)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&9464) != 0 {
		{
			p.SetState(18)
			p.Line()
		}

		p.SetState(23)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(24)
		p.Match(GetfaclParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ILineContext is an interface to support dynamic dispatch.
type ILineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	HeaderLine() IHeaderLineContext
	NL() antlr.TerminalNode
	AclEntryLine() IAclEntryLineContext
	CommentLine() ICommentLineContext

	// IsLineContext differentiates from other interfaces.
	IsLineContext()
}

type LineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLineContext() *LineContext {
	p := new(LineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_line
	return p
}

func InitEmptyLineContext(p *LineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_line
}

func (*LineContext) IsLineContext() {}

func NewLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LineContext {
	p := new(LineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GetfaclParserRULE_line

	return p
}

func (s *LineContext) GetParser() antlr.Parser { return s.parser }

func (s *LineContext) HeaderLine() IHeaderLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHeaderLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHeaderLineContext)
}

func (s *LineContext) NL() antlr.TerminalNode {
	return s.GetToken(GetfaclParserNL, 0)
}

func (s *LineContext) AclEntryLine() IAclEntryLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAclEntryLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAclEntryLineContext)
}

func (s *LineContext) CommentLine() ICommentLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommentLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommentLineContext)
}

func (s *LineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GetfaclListener); ok {
		listenerT.EnterLine(s)
	}
}

func (s *LineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GetfaclListener); ok {
		listenerT.ExitLine(s)
	}
}

func (p *GetfaclParser) Line() (localctx ILineContext) {
	localctx = NewLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GetfaclParserRULE_line)
	p.SetState(36)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(26)
			p.HeaderLine()
		}
		{
			p.SetState(27)
			p.Match(GetfaclParserNL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(29)
			p.AclEntryLine()
		}
		{
			p.SetState(30)
			p.Match(GetfaclParserNL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(32)
			p.CommentLine()
		}
		{
			p.SetState(33)
			p.Match(GetfaclParserNL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(35)
			p.Match(GetfaclParserNL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IHeaderLineContext is an interface to support dynamic dispatch.
type IHeaderLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	HASH() antlr.TerminalNode
	HeaderKey() IHeaderKeyContext
	COLON() antlr.TerminalNode
	AllWS() []antlr.TerminalNode
	WS(i int) antlr.TerminalNode
	ValueAtom() IValueAtomContext

	// IsHeaderLineContext differentiates from other interfaces.
	IsHeaderLineContext()
}

type HeaderLineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyHeaderLineContext() *HeaderLineContext {
	p := new(HeaderLineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_headerLine
	return p
}

func InitEmptyHeaderLineContext(p *HeaderLineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_headerLine
}

func (*HeaderLineContext) IsHeaderLineContext() {}

func NewHeaderLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *HeaderLineContext {
	p := new(HeaderLineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GetfaclParserRULE_headerLine

	return p
}

func (s *HeaderLineContext) GetParser() antlr.Parser { return s.parser }

func (s *HeaderLineContext) HASH() antlr.TerminalNode {
	return s.GetToken(GetfaclParserHASH, 0)
}

func (s *HeaderLineContext) HeaderKey() IHeaderKeyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHeaderKeyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHeaderKeyContext)
}

func (s *HeaderLineContext) COLON() antlr.TerminalNode {
	return s.GetToken(GetfaclParserCOLON, 0)
}

func (s *HeaderLineContext) AllWS() []antlr.TerminalNode {
	return s.GetTokens(GetfaclParserWS)
}

func (s *HeaderLineContext) WS(i int) antlr.TerminalNode {
	return s.GetToken(GetfaclParserWS, i)
}

func (s *HeaderLineContext) ValueAtom() IValueAtomContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValueAtomContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValueAtomContext)
}

func (s *HeaderLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *HeaderLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *HeaderLineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GetfaclListener); ok {
		listenerT.EnterHeaderLine(s)
	}
}

func (s *HeaderLineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GetfaclListener); ok {
		listenerT.ExitHeaderLine(s)
	}
}

func (p *GetfaclParser) HeaderLine() (localctx IHeaderLineContext) {
	localctx = NewHeaderLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GetfaclParserRULE_headerLine)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)
		p.Match(GetfaclParserHASH)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(42)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == GetfaclParserWS {
		{
			p.SetState(39)
			p.Match(GetfaclParserWS)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(44)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(45)
		p.HeaderKey()
	}
	{
		p.SetState(46)
		p.Match(GetfaclParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == GetfaclParserWS {
		{
			p.SetState(47)
			p.Match(GetfaclParserWS)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == GetfaclParserVALUE_ATOM {
		{
			p.SetState(53)
			p.ValueAtom()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICommentLineContext is an interface to support dynamic dispatch.
type ICommentLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	HASH() antlr.TerminalNode
	ValueAtom() IValueAtomContext

	// IsCommentLineContext differentiates from other interfaces.
	IsCommentLineContext()
}

type CommentLineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCommentLineContext() *CommentLineContext {
	p := new(CommentLineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_commentLine
	return p
}

func InitEmptyCommentLineContext(p *CommentLineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_commentLine
}

func (*CommentLineContext) IsCommentLineContext() {}

func NewCommentLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommentLineContext {
	p := new(CommentLineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GetfaclParserRULE_commentLine

	return p
}

func (s *CommentLineContext) GetParser() antlr.Parser { return s.parser }

func (s *CommentLineContext) HASH() antlr.TerminalNode {
	return s.GetToken(GetfaclParserHASH, 0)
}

func (s *CommentLineContext) ValueAtom() IValueAtomContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValueAtomContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValueAtomContext)
}

func (s *CommentLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommentLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CommentLineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GetfaclListener); ok {
		listenerT.EnterCommentLine(s)
	}
}

func (s *CommentLineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GetfaclListener); ok {
		listenerT.ExitCommentLine(s)
	}
}

func (p *GetfaclParser) CommentLine() (localctx ICommentLineContext) {
	localctx = NewCommentLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, GetfaclParserRULE_commentLine)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.Match(GetfaclParserHASH)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == GetfaclParserVALUE_ATOM {
		{
			p.SetState(57)
			p.ValueAtom()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAclEntryLineContext is an interface to support dynamic dispatch.
type IAclEntryLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Tag() ITagContext
	AllCOLON() []antlr.TerminalNode
	COLON(i int) antlr.TerminalNode
	Qualifier() IQualifierContext
	PERM() antlr.TerminalNode
	DEFAULT_PREFIX() antlr.TerminalNode

	// IsAclEntryLineContext differentiates from other interfaces.
	IsAclEntryLineContext()
}

type AclEntryLineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAclEntryLineContext() *AclEntryLineContext {
	p := new(AclEntryLineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_aclEntryLine
	return p
}

func InitEmptyAclEntryLineContext(p *AclEntryLineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_aclEntryLine
}

func (*AclEntryLineContext) IsAclEntryLineContext() {}

func NewAclEntryLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AclEntryLineContext {
	p := new(AclEntryLineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GetfaclParserRULE_aclEntryLine

	return p
}

func (s *AclEntryLineContext) GetParser() antlr.Parser { return s.parser }

func (s *AclEntryLineContext) Tag() ITagContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITagContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITagContext)
}

func (s *AclEntryLineContext) AllCOLON() []antlr.TerminalNode {
	return s.GetTokens(GetfaclParserCOLON)
}

func (s *AclEntryLineContext) COLON(i int) antlr.TerminalNode {
	return s.GetToken(GetfaclParserCOLON, i)
}

func (s *AclEntryLineContext) Qualifier() IQualifierContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IQualifierContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IQualifierContext)
}

func (s *AclEntryLineContext) PERM() antlr.TerminalNode {
	return s.GetToken(GetfaclParserPERM, 0)
}

func (s *AclEntryLineContext) DEFAULT_PREFIX() antlr.TerminalNode {
	return s.GetToken(GetfaclParserDEFAULT_PREFIX, 0)
}

func (s *AclEntryLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AclEntryLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AclEntryLineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GetfaclListener); ok {
		listenerT.EnterAclEntryLine(s)
	}
}

func (s *AclEntryLineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GetfaclListener); ok {
		listenerT.ExitAclEntryLine(s)
	}
}

func (p *GetfaclParser) AclEntryLine() (localctx IAclEntryLineContext) {
	localctx = NewAclEntryLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, GetfaclParserRULE_aclEntryLine)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == GetfaclParserDEFAULT_PREFIX {
		{
			p.SetState(60)
			p.Match(GetfaclParserDEFAULT_PREFIX)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
	}
	{
		p.SetState(63)
		p.Tag()
	}
	{
		p.SetState(64)
		p.Match(GetfaclParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(65)
		p.Qualifier()
	}
	{
		p.SetState(66)
		p.Match(GetfaclParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(67)
		p.Match(GetfaclParserPERM)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IHeaderKeyContext is an interface to support dynamic dispatch.
type IHeaderKeyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	GROUP_TAG() antlr.TerminalNode

	// IsHeaderKeyContext differentiates from other interfaces.
	IsHeaderKeyContext()
}

type HeaderKeyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyHeaderKeyContext() *HeaderKeyContext {
	p := new(HeaderKeyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_headerKey
	return p
}

func InitEmptyHeaderKeyContext(p *HeaderKeyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_headerKey
}

func (*HeaderKeyContext) IsHeaderKeyContext() {}

func NewHeaderKeyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *HeaderKeyContext {
	p := new(HeaderKeyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GetfaclParserRULE_headerKey

	return p
}

func (s *HeaderKeyContext) GetParser() antlr.Parser { return s.parser }

func (s *HeaderKeyContext) GROUP_TAG() antlr.TerminalNode {
	return s.GetToken(GetfaclParserGROUP_TAG, 0)
}

func (s *HeaderKeyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *HeaderKeyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *HeaderKeyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GetfaclListener); ok {
		listenerT.EnterHeaderKey(s)
	}
}

func (s *HeaderKeyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GetfaclListener); ok {
		listenerT.ExitHeaderKey(s)
	}
}

func (p *GetfaclParser) HeaderKey() (localctx IHeaderKeyContext) {
	localctx = NewHeaderKeyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, GetfaclParserRULE_headerKey)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(69)
		_la = p.GetTokenStream().LA(1)

		if !((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&38) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITagContext is an interface to support dynamic dispatch.
type ITagContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	USER_TAG() antlr.TerminalNode
	GROUP_TAG() antlr.TerminalNode
	OTHER_TAG() antlr.TerminalNode
	MASK_TAG() antlr.TerminalNode

	// IsTagContext differentiates from other interfaces.
	IsTagContext()
}

type TagContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTagContext() *TagContext {
	p := new(TagContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_tag
	return p
}

func InitEmptyTagContext(p *TagContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GetfaclParserRULE_tag
}

func (*TagContext) IsTagContext() {}

func NewTagContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TagContext {
	p := new(TagContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GetfaclParserRULE_tag

	return p
}

func (s *TagContext) GetParser() antlr.Parser { return s.parser }

func (s *TagContext) USER_TAG() antlr.TerminalNode {
	return s.GetToken(GetfaclParserUSER_TAG, 0)
}

func (s *TagContext) GROUP_TAG() antlr.TerminalNode {
	return s.GetToken(GetfaclParserGROUP_TAG, 0)
}

func (s *TagContext) OTHER_TAG() antlr.TerminalNode {
	return s.GetToken(GetfaclParserOTHER_TAG, 0)
}

func (s *TagContext) MASK_TAG() antlr.TerminalNode {
	return s.GetToken(GetfaclParserMASK_TAG, 0)
}
